feat: second youtube icon

--- a/_config.yml
+++ b/_config.yml
@@ -28,8 +28,8 @@ footer-links:
   rss: YesPlease
   twitter: jekyllrb
   stackoverflow: users/536874/johannes
-  youtube: channel/UCkA6MYHA0lJLKDrZkOjGTqg
-  youtube: user/Maralein94
+  youtube1: channel/UCkA6MYHA0lJLKDrZkOjGTqg
+  youtube2: user/Maralein94
   googleplus: # anything in your profile username that comes after plus.google.com/
 
 
