fixed footer twitter link

--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ footer-links:
   linkedin:
   pinterest:
   rss: YesPlease
-  twitter: jekyllrb
+  twitter: Aypahyo
   stackoverflow: users/536874/johannes
   youtube1: channel/UCkA6MYHA0lJLKDrZkOjGTqg
   youtube2: user/Maralein94
